--- a/front/index.html
+++ b/front/index.html
@@ -7,17 +7,35 @@
 	<!--Get Screen Dimensions-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<!--Montserrat-->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 	<nav>
 		<input class="text-field" type="search" placeholder="Search Places"/>
 	</nav>
-	
-	<div id="map"></div>
+
+	<div id="events">
+		<p class="heading">Events</p>
+		<div id="events-container">
+			<div class="event"></div>
+		</div>
+	</div>
+
+	<main>
+		<p class="heading">Places</p>
+		<div id="places-container">
+			<div class="place"></div>
+			<div class="place"></div>
+			<div class="place"></div>
+			<div class="place"></div>
+			<div class="place"></div>
+			<div class="place"></div>
+			<div class="place"></div>
+			<div class="place"></div>
+			<div class="place"></div>
+			<div class="place"></div>
+		</div>
+	</main>
+
 
 	<div id="ride-card">
 		<input class="text-field" id="destination" placeholder="Select a destination" readonly="true"/>
