Changed layouts to select locations via tiles, and added javascript to get user location and read search query

--- a/front/index.html
+++ b/front/index.html
@@ -10,29 +10,25 @@
 </head>
 <body>
 	<nav>
-		<input class="text-field" type="search" placeholder="Search Places"/>
+		<input class="text-field" id="search" type="search" placeholder="Search Places"/>
 	</nav>
 
 	<div id="events">
 		<p class="heading">Events</p>
 		<div id="events-container">
-			<div class="event"></div>
+			<div class="event"><p>Nasty C concert</p></div>
 		</div>
 	</div>
 
 	<main>
 		<p class="heading">Places</p>
 		<div id="places-container">
-			<div class="place"></div>
-			<div class="place"></div>
-			<div class="place"></div>
-			<div class="place"></div>
-			<div class="place"></div>
-			<div class="place"></div>
-			<div class="place"></div>
-			<div class="place"></div>
-			<div class="place"></div>
-			<div class="place"></div>
+			<div class="place"><p>Engineering III</p></div>
+			<div class="place"><p>Engineering I</p></div>
+			<div class="place"><p>Aula</p></div>
+			<div class="place"><p>Engineering III</p></div>
+			<div class="place"><p>Engineering III</p></div>
+			<div class="place"><p>Engineering III</p></div>
 		</div>
 	</main>
 
@@ -42,5 +38,7 @@
 		<button id="request-ride">Request</button>
 	</div>
 
+	<script src="./location.js"></script>
+	<script src="./script.js"></script>
 </body>
 </html>
