--- a/front/index.html
+++ b/front/index.html
@@ -12,26 +12,74 @@
 	<nav>
 		<input class="text-field" id="search" type="search" placeholder="Search Places"/>
 	</nav>
+	
+	<div id="main-page">
+		<!--
+		<div id="events">
+			<p class="heading">Events</p>
+			<div id="events-container">
+				<div class="event"><p>Nasty C concert</p></div>
+			</div>
+		</div>
+		-->
 
-	<div id="events">
-		<p class="heading">Events</p>
-		<div id="events-container">
-			<div class="event"><p>Nasty C concert</p></div>
+		<main>
+			<p class="heading">Places</p>
+			<div id="places-container">
+				<div class="place" onclick="placeClicked(this)"><p>Engineering III</p></div>
+			</div>
+		</main>
+
+	</div>
+	<div id="place-page"> 
+		<article>
+			<p class="heading">Engineering I</p>
+			<div id="place-container">
+				<div class="place"></div>
+			</div>
+
+			<div id="description-container">
+				<p id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat ultrices felis, in vestibulum dui rhoncus eu.</p>
+			</div>
+
+		</article>
+	</div>
+	<div id="event-page">
+		<article>
+			<div id="events">
+				<p class="heading">Piazza Festival</p>
+				<div id="events-container">
+					<div class="event"></div>
+				</div>
+			</div>
+
+			<div id="description-container">
+				<p id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat ultrices felis, in vestibulum dui rhoncus eu.</p>
+			</div>
+
+			<p class="heading">Location</p>
+			<div id="location-container">
+				<p id="location">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+
+			<p class="heading">Time</p>
+			<div id="time-container">
+				<p id="location">12:00</p>
+			</div>
+
+		</article>
+	</div>
+	<div id="search-page">
+		<p class="heading">Results</p>
+		<div id="results-container">
+			<div class="place"><p>Engineering III</p></div>
 		</div>
 	</div>
 
-	<main>
-		<p class="heading">Places</p>
-		<div id="places-container">
-			<div class="place"><p>Engineering III</p></div>
-			<div class="place"><p>Engineering I</p></div>
-			<div class="place"><p>Aula</p></div>
-			<div class="place"><p>Engineering III</p></div>
-			<div class="place"><p>Engineering III</p></div>
-			<div class="place"><p>Engineering III</p></div>
-		</div>
-	</main>
-
+	<!-- Buttons -->
+	<div id="go-to-container">
+		<button id="go-to">Go To</button>
+	</div>
 
 	<div id="ride-card">
 		<input class="text-field" id="destination" placeholder="Select a destination" readonly="true"/>
@@ -40,5 +88,6 @@
 
 	<script src="./location.js"></script>
 	<script src="./script.js"></script>
+	<script src="./nav.js"></script>
 </body>
 </html>
