Finished page navigation, yet to fix circular back button loop

--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
+	<div id="back"></div>
+
 	<nav>
 		<input class="text-field" id="search" type="search" placeholder="Search Places"/>
 	</nav>
@@ -25,14 +27,14 @@
 		<main>
 			<p class="heading">Places</p>
 			<div id="places-container">
-				<div class="place" onclick="placeClicked(this)"><p>Engineering III</p></div>
+				<div class="place"><p>Engineering III</p></div>
 			</div>
 		</main>
 
 	</div>
 	<div id="place-page"> 
 		<article>
-			<p class="heading">Engineering I</p>
+			<p class="heading">Engineering III</p>
 			<div id="place-container">
 				<div class="place"></div>
 			</div>
@@ -86,7 +88,6 @@
 	</div>
 
 	<script src="./location.js"></script>
-	<script src="./script.js"></script>
 	<script src="./nav.js"></script>
 </body>
 </html>
