--- a/front/login.html
+++ b/front/login.html
@@ -13,7 +13,9 @@
 	<div id="login-container">
 		<input class="text-field" type="text" placeholder="Username" />
 		<input class="text-field" type="password" placeholder="Password"/>
-		<button id="login">Log In</button>
+		<button id="login" href="./index.html">Log In</button>
 	</div>
+
+	<script src="./login.js"></script>
 </body>
 </html>
