--- a/front/index.html
+++ b/front/index.html
@@ -89,5 +89,15 @@
 
 	<script src="./location.js"></script>
 	<script src="./nav.js"></script>
+
+	<script>
+		document.addEventListener("DOMContentLoaded", function () {
+		  const links = document.querySelectorAll("a");
+
+		  links.forEach((link) => {
+			  link.href = link.href+`&lat=${encodeURIComponent(Math.floor(latitude*1000000)/1000000)}&long=${encodeURIComponent(Math.floor(longitude*1000000)/1000000)}`;
+		  });
+	  });
+  </script>
 </body>
 </html>
