--- a/front/index.html
+++ b/front/index.html
@@ -27,7 +27,13 @@
 		<main>
 			<p class="heading">Places</p>
 			<div id="places-container">
-				<div class="place"><p>Engineering III</p></div>
+				{% for place in places %}
+				<a id="{{place.name}}" href="http://localhost:8000/place?place={{place.id}}">
+				<div id="{{place.name}}" class="place">
+					<img id="{{place.name}}" src="{% static 'nav/images/exampleoldarts.jpg' %}" alt="Image of {{ place.name }}">
+					<p id="{{place.name}}" > {{place.name}} </p> </div>
+				</a>
+				{% endfor %}
 			</div>
 		</main>
 
